Sun Jan 24 14:13:37 1999  Geoff Hutchison  <ghutchis@wso.williams.edu>

	* htsearch/Display.cc(logSearch): Added fix from Gilles in case
	REMOTE_ADDR is NULL as well.

	* htnotify/htnotify.cc: Fix compiler warnings.

	* htlib/String.cc(indexOf): Use autoconf check for strstr, fix
	compiler warnings.

	* htlib/Configuration.cc(Find): Complain when option is not in the
	list.

Mon Jan 25 02:17:58 1999  Hans-Peter Nilsson  <hp@axis.se>
	
	* htcommon/defaults.cc (defaults): New option
	"uncoded_db_compatible", default true.

	* htcommon/DocumentDB.h (DocumentDB::SetCompatibility): New
	function.
	(DocumentDB::myTryUncoded): New member.

	* htcommon/DocumentDB.cc (Constructor, Add(), operator[],
	Exists(), Delete()):  Handle uncoded URL in database if
	myTryUncoded.

	* htdig/main.cc (main): Call (DocumentDB::)SetCompatibility() with
	option "uncoded_db_compatible".
	* htsearch/Display.cc (Display): Likewise.
	* htnotify/htnotify.cc (main): Likewise.
	* htmerge/docs.cc (convertDocs): Likewise.
	* htmerge/db.cc (mergeDB): Likewise.

	* htdoc/attrs.html, htdoc/cf_byname.html, htdoc/cf_byprog.html:
	Document option "uncoded_db_compatible".

Sun Jan 24 15:21:02 1999  Hans-Peter Nilsson  <hp@axis.se>

	* htlib/HtWordCodec.cc (HtWordCodec(StringList &, etc)): Check
	limits separately for "to" and "from".  Do not calculate
	string-lengths separately for limit-checking; use methods Count()
	and length() on data near the final result.

	* htlib/HtWordCodec.cc (HtWordCodec constructors): Do not
	explicitly add '\0' to the pattern strings.

	* htlib/HtWordCodec.cc (code): Check for zero-length replacement
	list.

Sat Jan 23 22:18:18 1999  Geoff Hutchison  <ghutchis@wso.williams.edu>

	* htdig/Retriever.cc(parse_url): If a server ignores the
	If-Modified-Since request, still compare the retrieved date to the
	stored date to see if it has been modified.

Sat Jan 23 13:09:03 1999  Geoff Hutchison  <ghutchis@wso.williams.edu>
